# style-hub

./: .beans.yml  .gitignore  Cargo.toml  README.md  STYLE_EDITOR_VISION.md  docker-compose.yml  package-lock.json  package.json
.beans/: style-hub-7z3i--add-db-persistance.md
client/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/resources/: component-template.tsx  source_design.html  style-guide.json
client/scripts/: fetch-stitch.sh
client/src/: App.tsx  index.css
client/src/layouts/: MainLayout.tsx
client/src/lib/components/: DecisionWizard.svelte
client/src/lib/stores/: auth.ts
client/src/pages/: AboutPage.tsx  HomePage.tsx  StyleDetailPage.tsx  WizardPage.tsx
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/auth/callback/: +page.svelte
client/src/routes/create-wizard/: +page.svelte
client/src/routes/style/[id]/: +page.svelte
client/stitch_mockups/csl_style_hub_home_1/: code.html
client/stitch_mockups/csl_style_hub_home_2/: code.html
client/stitch_mockups/style_creation_wizard_1/: code.html
client/stitch_mockups/style_creation_wizard_2/: code.html
client/stitch_mockups/style_preview_&_stress_test_1/: code.html
client/stitch_mockups/style_preview_&_stress_test_2/: code.html
client/temp_app/: package-lock.json  package.json
server/: Cargo.toml  payload.json
server/client/src/lib/types/: bindings.ts
server/crates/api/: Cargo.toml
server/crates/api/src/: main.rs
server/crates/intent-engine/: Cargo.toml
server/crates/intent-engine/src/: lib.rs
server/src/: auth.rs  main.rs
