[package]
name = "style-editor-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"

# Core CSL logic
csln_core = { git = "https://github.com/bdarcus/csl26", branch = "main" }
csln_processor = { git = "https://github.com/bdarcus/csl26", branch = "main" }
serde_yaml = "0.9.34"
