[package]
name = "style-editor-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Core CSL logic
csln_core = { git = "https://github.com/bdarcus/csl26", branch = "main" }
csln_processor = { git = "https://github.com/bdarcus/csl26", branch = "main" }
serde_yaml = "0.9.34"
