[package]
name = "intent-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "1.0.5", features = ["serde", "typescript", "export"] }
csln_core = { git = "https://github.com/bdarcus/csl26", branch = "main" }
serde_yaml = "0.9.34"
